# typst-mahjong-tiles

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
typst-package/: example.typ  mahjong_tiles.wasm  typst.toml
typst-package/src/: mod.typ
